--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Théâtre de la Grenouille\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-19 18:24+0000\n"
-"PO-Revision-Date: 2019-08-19 18:26+0000\n"
+"PO-Revision-Date: 2019-08-23 09:26+0000\n"
 "Last-Translator: admin <adrian@thgie.ch>\n"
 "Language-Team: French (France)\n"
 "Language: fr_FR\n"
@@ -20,7 +20,7 @@ msgstr ""
 
 #. Name of the template
 msgid "Agenda"
-msgstr ""
+msgstr "Calendrier"
 
 #. Name of the template
 msgid "Default"
@@ -52,7 +52,7 @@ msgstr ""
 
 #. Name of the template
 msgid "Production"
-msgstr ""
+msgstr "Production"
 
 #. Name of the theme
 msgid "Théâtre de la Grenouille"
@@ -61,3 +61,7 @@ msgstr ""
 #: page-homepage.php:43
 msgid "view"
 msgstr "Voir cette production"
+
+#. search
+msgid "search"
+msgstr "Chercher"
